syntax = "proto3";

option go_package = "github.com/xujiajiadexiaokeai/ebpf-kube-agent/pkg/manager/pb";

package pb;

service Manager {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc GetKubernetesVersion (KubernetesVersionRequest) returns (KubernetesVersionReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

message KubernetesVersionRequest {
}

message KubernetesVersionReply {
    string version = 1;
}
